# creator

./: .gitignore  LICENSE  README.md  README.rst  pyproject.toml
creator/: __main__.py  checks.py  script.py
creator/scripts/: generate_vite_project.py  install_ladle.py  install_tailwindcss.py  install_twin_macro_with_emotion.py
