[tool.poetry]
name = "creator"
version = "0.1.0"
description = ""
authors = ["Romain Dorgueil <romain@makersquad.fr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1.7"
packaging = "^23.2"
pyjson5 = "^1.6.5"


[tool.poetry.group.dev.dependencies]
black = "^23.12.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
